[tool.poetry]
name = "projectgit"
version = "0.1.0"
description = ""
authors = ["GrMorality <jmihailys@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
